# guimob2d

./: gradle.properties  local.properties
app/: build.gradle  proguard-rules.pro
app/src/main/assets/maps/: work_map.txt  work_mapOld.txt
app/src/main/cpp/: AIComponent.cpp  AISystem.cpp  BoundingBoxComponent.cpp  CMakeLists.txt  CollisionComponent.cpp  CollisionSystem.cpp  Components.h  Entity.h  Game.cpp  Game.h  Globs.cpp  Globs.h  InputComponent.cpp  InputSystem.cpp  RenderSystem.cpp  SpriteComponent.cpp  System.cpp  Systems.h  TransformComponent.cpp  Utils.cpp  Utils.h  WorkMapEditor.cpp  WorkMapEditor.h  imgui_raymob.cpp  imgui_raymob.h  main.cpp
app/src/main/cpp/base/: Source.h
app/src/main/cpp/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
app/src/main/java/bb/ink/raymob1/: DisplayManager.java  NativeLoader.java  SoftKeyboard.java
